--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">DocTrack</string>
-    <string-array name="Login_as">
+    <string-array name="Login_as">Login as:
         <item>Health Professional</item>
         <item>Patient</item>
     </string-array>
     <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="email">Email/username</string>
+    <string name="password">Password</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_device">Device</string>
@@ -13,6 +16,10 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string-array name="Gender">Gender
+        <item>Female</item>
+        <item>Male</item>
+    </string-array>
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
